trunk/Source/include/OpenGL1x.hpp


extern "C" void __stdcall glRasterPos2d(double x, double y);

extern "C" void __stdcall glRasterPos2dv(System::PDouble v);

extern "C" void __stdcall glRasterPos2f(float x, float y);

extern "C" void __stdcall glRasterPos2fv(System::PSingle v);

extern "C" void __stdcall glRasterPos2i(int x, int y);

extern "C" void __stdcall glRasterPos2iv(Opengltokens::PGLint v);

extern "C" void __stdcall glRasterPos2s(Opengltokens::PGLshort x, Opengltokens::PGLshort y);

extern "C" void __stdcall glRasterPos2sv(Opengltokens::PGLshort v);

extern "C" void __stdcall glRasterPos3d(double x, double y, double z);

extern "C" void __stdcall glRasterPos3dv(System::PDouble v);

extern "C" void __stdcall glRasterPos3f(float x, float y, float z);

extern "C" void __stdcall glRasterPos3fv(System::PSingle v);

extern "C" void __stdcall glRasterPos3i(int x, int y, int z);

extern "C" void __stdcall glRasterPos3iv(Opengltokens::PGLint v);

extern "C" void __stdcall glRasterPos3s(short x, short y, short z);

extern "C" void __stdcall glRasterPos3sv(Opengltokens::PGLshort v);

extern "C" void __stdcall glRasterPos4d(double x, double y, double z, double w);

extern "C" void __stdcall glRasterPos4dv(System::PDouble v);

extern "C" void __stdcall glRasterPos4f(float x, float y, float z, float w);

extern "C" void __stdcall glRasterPos4fv(System::PSingle v);

extern "C" void __stdcall glRasterPos4i(int x, int y, int z, int w);

extern "C" void __stdcall glRasterPos4iv(Opengltokens::PGLint v);

extern "C" void __stdcall glRasterPos4s(short x, short y, short z, short w);

extern "C" void __stdcall glRasterPos4sv(Opengltokens::PGLshort v);

extern "C" void __stdcall glRectd(double x1, double y1, double x2, double y2);

extern "C" void __stdcall glRectdv(System::PDouble v1, System::PDouble v2);

extern "C" void __stdcall glRectf(float x1, float y1, float x2, float y2);

extern "C" void __stdcall glRectfv(System::PSingle v1, System::PSingle v2);

extern "C" void __stdcall glRecti(int x1, int y1, int x2, int y2);

extern "C" void __stdcall glRectiv(Opengltokens::PGLint v1, Opengltokens::PGLint v2);

extern "C" void __stdcall glRects(short x1, short y1, short x2, short y2);

extern "C" void __stdcall glRectsv(Opengltokens::PGLshort v1, Opengltokens::PGLshort v2);

extern "C" int __stdcall glRenderMode(unsigned mode);

extern "C" void __stdcall glRotated(double angle, double x, double y, double z);

extern "C" void __stdcall glRotatef(float angle, float x, float y, float z);